fix(styles): Use nowrap to display migration buttons on the same line (#3832)

--- a/system-addon/content-src/components/ManualMigration/_ManualMigration.scss
+++ b/system-addon/content-src/components/ManualMigration/_ManualMigration.scss
@@ -34,6 +34,7 @@
 .manual-migration-actions {
   border: none;
   display: block;
+  flex-wrap: nowrap;
 
   @media (min-width: $break-point-medium) {
     display: flex;
